--- a/notebooks/create_dataset.ipynb
+++ b/notebooks/create_dataset.ipynb
@@ -786,11 +786,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "targets = {}\n",
+    "\n",
     "for i, r in epi.iterrows():\n",
     "    label = filt(r[\"title\"]) # convert label to better string\n",
     "#     label = str(label.encode(\"ascii\", \"ignore\"))\n",
@@ -803,24 +804,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bDSStor\n",
-      "RumCaramelandBananaBreadPudding\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "targets = pkl.load(open(\"targets_dict.pkl\", \"rb\"))\n",
     "imgs = os.listdir(\"simple_images\")\n",
     "downloaded = []\n",
     "for i in imgs:\n",
-    "    if filt(i[:-1]) in targets.keys():\n",
+    "    if filt(i) in targets.keys():\n",
     "        downloaded.append(i)\n",
     "    else:\n",
     "        print(filt(str(i[:-1].encode(\"ascii\", \"ignore\"))))"
@@ -1041,6 +1033,43 @@
    ],
    "source": [
     "torch.any(torch.isnan(oi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imgs_path = \"../../data/snapnsnackdb/simple_images\"\n",
+    "for path in os.listdir(imgs_path):\n",
+    "    for f in os.listdir(os.path.join(imgs_path, path)):\n",
+    "        bf = os.path.join(imgs_path, path, f)\n",
+    "        af= os.path.join(imgs_path, path, filt(f.split(\".\")[0]) + \".\" + f.split(\".\")[1])\n",
+    "#         print(af)\n",
+    "#         break\n",
+    "#     break\n",
+    "        os.rename(bf, af)\n",
+    "#         if \".jpg\" in f or \".jpeg\" in f:\n",
+    "#             category = os.path.basename(path)\n",
+    "#             category = self.filt(category)\n",
+    "#             if not torch.any(torch.isnan(self.targets_dict[category])):\n",
+    "#                 if len(plt.imread(os.path.join(imgs_path, path, f)).shape) == 3:\n",
+    "#                     imgs_paths.append((category, os.path.join(imgs_path, path, f)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from unidecode import unidecode\n",
+    "def filt(string):\n",
+    "    string = unidecode(string)\n",
+    "    string = string.strip().replace(\" \", \"+\").replace(\",\", \"\")\n",
+    "    string = ''.join(e for e in string if e.isalnum())\n",
+    "    return string"
    ]
   },
   {
