Fixed gpu to cpu tensors to calculate r2 metric

--- a/notebooks/test_train.ipynb
+++ b/notebooks/test_train.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -64,14 +64,20 @@
      "text": [
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
-      "/opt/anaconda3/envs/py36/lib/python3.6/site-packages/pytorch_lightning/utilities/distributed.py:45: UserWarning: you passed in a val_dataloader but have no validation_step. Skipping validation loop\n",
-      "  warnings.warn(*args, **kwargs)\n"
+      "\u001b[34m\u001b[1mwandb\u001b[0m: wandb version 0.10.11 is available!  To upgrade, please run:\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m:  $ pip install wandb --upgrade\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "Finishing last run (ID:1d1rc12k) before initializing another..."
+       "\n",
+       "                Tracking run with wandb version 0.10.10<br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">restful-sound-38</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://wandb.ai/davinan/snapnsnack\" target=\"_blank\">https://wandb.ai/davinan/snapnsnack</a><br/>\n",
+       "                Run page: <a href=\"https://wandb.ai/davinan/snapnsnack/runs/347v2wqw\" target=\"_blank\">https://wandb.ai/davinan/snapnsnack/runs/347v2wqw</a><br/>\n",
+       "                Run data is saved locally in <code>/Users/davinan/Dropbox/github/Snap-N-Snack/notebooks/wandb/run-20201126_154117-347v2wqw</code><br/><br/>\n",
+       "            "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -81,92 +87,53 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/html": [
-       "<br/>Waiting for W&B process to finish, PID 61800<br/>Program ended successfully."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  | Name     | Type   | Params\n",
+      "------------------------------------\n",
+      "0 | backbone | ResNet | 11 M  \n"
+     ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "5e5f78103d8b4bd9b11007aa45e6cc45",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value=' 0.00MB of 0.00MB uploaded (0.00MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
+       "HBox(children=(HTML(value='Training'), FloatProgress(value=1.0, bar_style='info', layout=Layout(flex='2'), max…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/html": [
-       "Find user logs for this run at: <code>/Users/davinan/Dropbox/github/Snap-N-Snack/notebooks/wandb/run-20201126_154022-1d1rc12k/logs/debug.log</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/py36/lib/python3.6/site-packages/pytorch_lightning/utilities/distributed.py:45: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  warnings.warn(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     },
     {
      "data": {
-      "text/html": [
-       "Find internal logs for this run at: <code>/Users/davinan/Dropbox/github/Snap-N-Snack/notebooks/wandb/run-20201126_154022-1d1rc12k/logs/debug-internal.log</code>"
-      ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "1"
       ]
      },
+     "execution_count": 23,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                    <br/>Synced <strong style=\"color:#cdcd00\">skilled-spaceship-36</strong>: <a href=\"https://wandb.ai/davinan/snapnsnack/runs/1d1rc12k\" target=\"_blank\">https://wandb.ai/davinan/snapnsnack/runs/1d1rc12k</a><br/>\n",
-       "                "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "...Successfully finished last run (ID:1d1rc12k). Initializing new run:<br/><br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
