got rid of buggy debug prints

--- a/notebooks/test_train.ipynb
+++ b/notebooks/test_train.ipynb
@@ -351,7 +351,27 @@
      "output_type": "stream",
      "text": [
       "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2149 < 2153; dropping {'train_loss': 10.158279418945312, 'epoch': 1}.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2199 < 2203; dropping {'train_loss': 0.6045412421226501, 'epoch': 1}.\n"
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2199 < 2203; dropping {'train_loss': 0.6045412421226501, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2249 < 2253; dropping {'train_loss': 0.10747212171554565, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2299 < 2303; dropping {'train_loss': 458.1674499511719, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2349 < 2353; dropping {'train_loss': 9.072574615478516, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2399 < 2403; dropping {'train_loss': 0.08247444033622742, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2449 < 2453; dropping {'train_loss': 0.0037243233527988195, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2499 < 2503; dropping {'train_loss': 0.014412824995815754, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2549 < 2553; dropping {'train_loss': 0.000609922397416085, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2599 < 2603; dropping {'train_loss': 0.00020696096180472523, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2649 < 2653; dropping {'train_loss': 9069.7001953125, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2699 < 2703; dropping {'train_loss': 1.6307591199874878, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2749 < 2753; dropping {'train_loss': 5.392278671264648, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2799 < 2803; dropping {'train_loss': 0.09662586450576782, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2849 < 2853; dropping {'train_loss': 0.24400000274181366, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2899 < 2903; dropping {'train_loss': 0.44735968112945557, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2949 < 2953; dropping {'train_loss': 0.08058961480855942, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 2999 < 3003; dropping {'train_loss': 2.1207823753356934, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 3049 < 3053; dropping {'train_loss': 0.05637497827410698, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 3099 < 3103; dropping {'train_loss': 0.019624916836619377, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 3149 < 3153; dropping {'train_loss': 1.9764214754104614, 'epoch': 1}.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Step must only increase in log calls.  Step 3199 < 3203; dropping {'train_loss': 12.741828918457031, 'epoch': 1}.\n"
      ]
     }
    ],
