Fixed training params

--- a/notebooks/test_model.ipynb
+++ b/notebooks/test_model.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -55,20 +55,20 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import torch\n",
-    "model = SnapSnack(output_dim=4)\n",
-    "model.load_state_dict(torch.load(\"../models/model_2.pt\"))"
+    "model = SnapSnack(fc_layers=(), output_dim=4, lr=1)\n",
+    "model.load_state_dict(torch.load(\"../models/model_10.pt\", map_location=torch.device(\"cpu\")))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,115 +77,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "53a39d6f40074400aadbd11ab8a5d6c1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1818.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "from tqdm.notebook import tqdm\n",
     "preds = []\n",
     "targets = []\n",
+    "from datasets.img_dataset import UnNormalize\n",
+    "unnorm = UnNormalize()\n",
     "with torch.no_grad():\n",
-    "    for img, target in DataLoader(test_set, batch_size=1):\n",
+    "    for img, target in tqdm(DataLoader(test_set, batch_size=1)):\n",
     "        pred = model(img)\n",
-    "        preds.append(pred)\n",
-    "        targets.append(target)"
+    "        preds.append(unnorm(pred))\n",
+    "        targets.append(unnorm(target))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([tensor([[-0.0787, -0.0211,  0.1330,  0.0795]]),\n",
-       "  tensor([[-0.0787, -0.0211,  0.1330,  0.0795]]),\n",
-       "  tensor([[-0.0787, -0.0211,  0.1330,  0.0795]]),\n",
-       "  tensor([[-0.0787, -0.0211,  0.1330,  0.0795]]),\n",
-       "  tensor([[-0.0787, -0.0211,  0.1330,  0.0795]]),\n",
-       "  tensor([[-0.0787, -0.0211,  0.1330,  0.0795]]),\n",
-       "  tensor([[-0.0787, -0.0211,  0.1330,  0.0795]]),\n",
-       "  tensor([[-0.0787, -0.0211,  0.1330,  0.0795]]),\n",
-       "  tensor([[-0.0787, -0.0211,  0.1330,  0.0795]]),\n",
-       "  tensor([[-0.0787, -0.0211,  0.1330,  0.0795]])],\n",
-       " [tensor([[-0.0159, -0.0206, -0.0153, -0.0152]]),\n",
-       "  tensor([[-0.0175, -0.0258, -0.0169, -0.0178]]),\n",
-       "  tensor([[-0.0170, -0.0256, -0.0166, -0.0187]]),\n",
-       "  tensor([[-0.0144, -0.0040, -0.0136, -0.0166]]),\n",
-       "  tensor([[-0.0163, -0.0193, -0.0156, -0.0155]]),\n",
-       "  tensor([[-0.0170, -0.0256, -0.0162, -0.0185]]),\n",
-       "  tensor([[-0.0170, -0.0175, -0.0164, -0.0184]]),\n",
-       "  tensor([[-0.0169, -0.0256, -0.0169, -0.0174]]),\n",
-       "  tensor([[-0.0168, -0.0238, -0.0166, -0.0164]]),\n",
-       "  tensor([[-0.0160, -0.0243, -0.0152, -0.0178]])])"
+       "-0.0028166149505752247"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "preds[:10], targets[:10]"
+    "from sklearn.metrics import r2_score\n",
+    "import numpy as np\n",
+    "if type(preds) is list:\n",
+    "    preds = torch.cat(preds)\n",
+    "    targets = torch.cat(targets)\n",
+    "r2_score(np.abs(targets.numpy()), np.abs(preds.numpy()))\n",
+    "# r2_score(targets.numpy(), preds.numpy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(2.7274), tensor(0.))"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds.min(), targets.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[437.0171,  16.0986,  26.0172, 695.4551],\n",
+       "        [561.7183,  20.3758,  32.9166, 572.1035],\n",
+       "        [595.2773,  21.1195,  35.2029, 551.6035],\n",
+       "        ...,\n",
+       "        [549.6860,  19.5089,  31.6379, 627.0562],\n",
+       "        [503.7739,  18.1613,  26.1581, 720.0278],\n",
+       "        [516.8618,  19.2107,  26.8328, 665.7134]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "preds = torch.cat(preds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([-0.0787, -0.0787, -0.0787,  ..., -0.0787, -0.0787, -0.0787])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preds[:,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "targets = torch.cat(targets)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([-0.0159, -0.0175, -0.0170,  ..., -0.0168, -0.0166, -0.0175])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "targets[:, 0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
